--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <!-- Model Viewer Component -->
             <model-viewer 
                 id="model" 
-                src="model/Earbuds_Final.gltf" 
+                src="model/Earbuds_Finalv2.gltf" 
                 alt="LuxAudio Buds Pro Earbuds"
                 camera-controls 
                 tone-mapping="neutral" 
