--- a/index.html
+++ b/index.html
@@ -176,26 +176,26 @@
             <div class="color-grid">
                 <div class="color-card">
                     <div class="color-image-wrapper">
-                        <img src="images/earbuds-gold.jpg" alt="Metallic Gold LuxAudio Buds Pro">
+                        <img src="images/white_earbud.jpg" alt="Metallic Gold LuxAudio Buds Pro">
                     </div>
-                    <h3>Metallic Gold</h3>
+                    <h3>White Gold</h3>
                     <p>Our signature finish featuring a luxurious 18K gold-plated accent with brushed aluminum body. The perfect blend of elegance and sophistication.</p>
                     <span class="color-badge">Signature Edition</span>
                 </div>
                 <div class="color-card">
                     <div class="color-image-wrapper">
-                        <img src="images/earbuds-rose.jpg" alt="Rose Gold LuxAudio Buds Pro">
+                        <img src="images/grey_earbud.jpg" alt="Rose Gold LuxAudio Buds Pro">
                     </div>
-                    <h3>Rose Gold</h3>
+                    <h3>Grey Copper</h3>
                     <p>Refined rose gold finish with warm copper undertones. A contemporary classic that complements any outfit with timeless elegance.</p>
                     <span class="color-badge">Popular Choice</span>
                 </div>
                 <div class="color-card">
                     <div class="color-image-wrapper">
-                        <img src="images/earbuds-white.jpg" alt="Pearl White LuxAudio Buds Pro">
+                        <img src="images/yellow_earbud.jpg" alt="Pearl White LuxAudio Buds Pro">
                     </div>
-                    <h3>Pearl White</h3>
-                    <p>Pristine pearl white with a subtle pearlescent shimmer. Minimalist design meets modern aesthetics in this clean, sophisticated finish.</p>
+                    <h3>Lime Yellow</h3>
+                    <p>Pristine lime yellow with a subtle pearlescent shimmer. Minimalist design meets modern aesthetics in this clean, sophisticated finish.</p>
                     <span class="color-badge">Limited Edition</span>
                 </div>
             </div>
