--- a/index.html
+++ b/index.html
@@ -425,9 +425,9 @@
                     <a href="#" class="btn btn-secondary">Try Risk-Free for 30 Days</a>
                 </div>
                 <div class="cta-features">
-                    <span>✓ Free Worldwide Shipping</span>
-                    <span>✓ 2-Year Warranty</span>
-                    <span>✓ 30-Day Money Back</span>
+                    <span> Free Worldwide Shipping</span>
+                    <span> 2-Year Warranty</span>
+                    <span> 30-Day Money Back</span>
                 </div>
             </div>
         </div>
